<resources>
    <string name="app_name">TaskMaster</string>
    <string name="title_main">My Tasks</string>
    <string name="button_add_task">Add Task</string>
    <string name="button_all_tasks">All Tasks</string>
    <string name="img_task_list_content">Task List</string>
    <string name="add_task_page_title">Add Task</string>
    <string name="task_title_hint">Task Title</string>
    <string name="task_description_hint">Task Description</string>
    <string name="button_submit_add_task">Add Task</string>
    <string name="text_tasks_number">Tasks Submitted: 0</string>
    <string name="task_submitted_label">Submitted!</string>
    <string name="title_all_tasks_page">All Tasks</string>
    <string name="hint_username_text">username</string>
    <string name="button_save_username">Save</string>
    <string name="title_task_details">Task Details</string>
    <string name="hint_text_detailed_task_description">Detailed Task Description</string>
    <string name="text_detailed_task_description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="button_settings_main">Settings</string>
    <string name="button_sign_in">Log In</string>
    <string name="text_email_hint">E-Mail:</string>
    <string name="text_password_hint">Password:</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="text_confirmation">Verification Code (Check your e-mail)</string>
    <string name="button_confirmation">Confirm Email Address</string>

</resources>